/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/tutorial_java_projects.html
 */
buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.netflix.nebula:gradle-ospackage-plugin:8.4.1'
    }
}

plugins {
    id 'java'
    id 'application'
}
apply plugin: 'nebula.deb'

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
    mavenCentral()
}

wrapper {
    gradleVersion = "6.7"
}

//

version = "0.4.2"
archivesBaseName = "MinecraftPacket"
mainClassName = 'McForgeMods.ForgeMods'
applicationName = "minpac"
java.sourceCompatibility = java.targetCompatibility = JavaVersion.VERSION_1_8

dependencies {
    compile 'info.picocli:picocli:4.2.0'
    compile 'org.json:json:20200518'
    compile 'org.tomlj:tomlj:1.0.0'
    compile 'org.apache.commons:commons-compress:1.20' // tar, bzip
    // compile 'commons-codec:commons-codec:1.13'
    compile 'org.apache.commons:commons-vfs2:2.6.0'

    compile 'com.jcraft:jsch:0.1.55' // sftp
    compile 'org.apache.httpcomponents:httpclient:4.5.12' // http

    annotationProcessor 'info.picocli:picocli-codegen:4.2.0'

    testCompile 'org.junit.jupiter:junit-jupiter:5.6.2'
}

compileJava {
    options.compilerArgs += ["-Aproject=${project.name}"]
}

jar {
    manifest {
        attributes (
            'Main-Class': mainClassName
        )
    }
}

task uberJar(type: Jar, group: "build") {
    appendix = 'uber'
    from sourceSets.main.output
    from configurations.runtimeClasspath
            .findAll{it.name.endsWith('jar')}
            .collect{zipTree(it)}
    manifest {
        attributes (
                'Main-Class': mainClassName
        )
    }
}

task autocompletion(type: JavaExec, dependsOn: "assemble") {
    workingDir('build/scripts')
    classpath(configurations.runtime, jar.outputs.files)
    main 'picocli.AutoComplete'
    args application.mainClassName, '-n', applicationName
}

task deb(type: Deb, group: 'build') {
    dependsOn(assemble)
    // dependsOn(autocompletion)

    release "dev"
    packageName applicationName
    packageDescription 'Gestionnaire de paquets pour Minecraft.'
    requires('java-runtime>=8')

    into '/opt/' + packageName
    from (jar.outputs.files) {
        into 'lib'
    }
    from (configurations.runtime) {
        into 'lib'
    }
    from ('build/scripts') {
        into 'bin'
        fileMode 0550
        exclude packageName + "_completion"
        exclude '*.bat'
    }
}

// Tests
test {
    useJUnitPlatform()
}